fix remove button visibility on first item

--- a/_sass/base/components/_multi-select.scss
+++ b/_sass/base/components/_multi-select.scss
@@ -6,11 +6,11 @@ multi-select {
       display: none;
     }
 
-    &:last-child .button-add {
+    &:last-of-type .button-add {
       display: inline-block;
     }
 
-    &:first-child:last-child .button-remove {
+    &:first-of-type:last-of-type .button-remove {
       display: none;
     }
 
